--- a/tests/gdx-tests-lwjgl/.classpath
+++ b/tests/gdx-tests-lwjgl/.classpath
@@ -14,7 +14,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/gdx-freetype"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/gdx-controllers"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/gdx-controllers-desktop"/>
-	<classpathentry kind="lib" path="/gdx-controllers-desktop/libs/gdx-controllers-desktop-natives.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Matt/Desktop/libgdx/libgdx/extensions/gdx-controllers/gdx-controllers-desktop/libs/gdx-controllers-desktop-natives.jar"/>
 	<classpathentry kind="lib" path="/gdx-box2d/libs/gdx-box2d-natives.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
